# WireGar

./: .gitignore  Cargo.toml  README.md  README2.md  Train.py  flowstart.py  install.ps1  install.sh  menu.py  requirements.txt  startup.py
crates/wirehunt-ai/: Cargo.toml
crates/wirehunt-ai/src/: copilot.rs  decoder.rs  lib.rs  provider.rs  rulegen.rs
crates/wirehunt-cli/: Cargo.toml
crates/wirehunt-cli/src/: banner.rs  main.rs
crates/wirehunt-cli/src/commands/: ai.rs  analyze.rs  export.rs  extract.rs  hunt.rs  live.rs  mod.rs  query.rs  serve.rs
crates/wirehunt-cli/static/: index.html
crates/wirehunt-core/: Cargo.toml
crates/wirehunt-core/benches/: parse_bench.rs
crates/wirehunt-core/src/: credentials.rs  crypto.rs  detect.rs  entropy.rs  extract.rs  hostprofile.rs  index.rs  ingest.rs  iocextract.rs  lib.rs  models.rs  narrative.rs  schema.rs  session.rs  threatintel.rs  timeline.rs
crates/wirehunt-core/src/protocols/: dhcp.rs  dns.rs  ftp.rs  http.rs  icmp.rs  mod.rs  smb.rs  smtp.rs  ssh.rs  telnet.rs  tls.rs
crates/wirehunt-rules/: Cargo.toml
crates/wirehunt-rules/src/: anomaly.rs  creds.rs  ctf.rs  exfil.rs  ioc.rs  lib.rs
crates/wirehunt-tui/: Cargo.toml
crates/wirehunt-tui/src/: app.rs  main.rs  ui.rs
crates/wirehunt-tui/src/views/: artifacts.rs  credentials.rs  dashboard.rs  dns.rs  flows.rs  http.rs  mod.rs  streams.rs
env/Scripts/: UTscapy-script.py  activate  activate.bat  scapy-script.py
flowgar/: flow_session.py  sniffer.py
flowgar/features/: flag_count.py  flow_bytes.py  packet_time.py
flowgar/features/context/: packet_direction.py  packet_flow_key.py
machinegar/: IDS1718_Dataset.csv  TrainModels.py
netgar/: netmain.py  startup.py
tests/fixtures/: test_http.pcap
