[workspace]
resolver = "2"
members = [
    "crates/wirehunt-core",
    "crates/wirehunt-cli",
    "crates/wirehunt-tui",
    "crates/wirehunt-ai",
    "crates/wirehunt-rules",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Brandon Cheong"]
license = "MIT"
description = "God-tier network forensic engine for CTF, IOC detection, credential harvesting, and AI-powered investigation"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
tokio = { version = "1", features = ["full"] }

# Core crate (internal)
wirehunt-core = { path = "crates/wirehunt-core" }
wirehunt-rules = { path = "crates/wirehunt-rules" }
wirehunt-ai = { path = "crates/wirehunt-ai" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
