[package]
name = "wirehunt-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WireHunt TUI - interactive terminal UI for network forensic analysis"

[[bin]]
name = "wirehunt-tui"
path = "src/main.rs"

[dependencies]
# Core engine
wirehunt-core.workspace = true
wirehunt-rules.workspace = true
wirehunt-ai.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Async runtime
tokio.workspace = true

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# CLI args
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
